--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,8 @@
   background: transparent !important;
   box-shadow: none !important;
 }
+.editor-ref {
+  background-color: #1E293B!important;
+  font-weight: 100!important;
+  opacity: 0.8!important;
+}
